# uniffi_swiftpkg_gen

./: .gitignore  Cargo.toml  README.md
examples/gixguardkit_rust/: .gitignore  Cargo.toml  README.md  build.rs  build.sh  rust-xc-universal-binary.sh  xc_generator.sh
examples/gixguardkit_rust/cpp_tests_ref/: .gitignore  CMakeLists.txt  main.c
examples/gixguardkit_rust/cpp_tests_ref/WireGuardKitC/: WireGuardKitC.h  key.c  key.h  x25519.c  x25519.h
examples/gixguardkit_rust/rust_cpp_test/: .gitignore  CMakeLists.txt  main.cpp
examples/gixguardkit_rust/src/: gix_guard.udl  lib.rs
examples/gixguardkit_rust/src/errors/: gix_guard_error_type.rs  mod.rs
examples/gixguardkit_rust/src/utils/: constants.rs  keys_utils.rs  mod.rs  x25519.rs
examples/gixguardkit_rust/tests/: keys_utils_integration-tests.rs
uniffi_swiftpkg_gen/: .gitignore  Cargo.toml  release.toml
uniffi_swiftpkg_gen/src/: cargo_package.rs  command_builder.rs  lib.rs  shared_constants.rs  swift_package_item.rs  xc_framework_generator.rs  xcgenerator.rs
uniffi_swiftpkg_gen/src/ext/: build_file_structure_trait.rs  mod.rs  output_ext.rs  pathbuf_ext.rs  string_ext.rs
uniffi_swiftpkg_gen/src/types/: mod.rs  swift_package.rs
