[package]
name = "uniffi_swiftpkg_gen"
version = "0.1.18"
edition = "2021"
license = "MPL-2.0"
authors = ["Jacob Hatami <mjhatamy@gmail.com>"]
description = "Xcode swift package framework generator/updater tool for rust UniFFI"
repository = "https://github.com/mjhatamy/uniffi_swiftpkg_gen"
keywords = ["ffi", "xcode", "swift", "swift_package", "spm"]
publish = true

[dependencies]
colored = "2.0.0"
convert_case = "0.5.0"
cargo_metadata = "0.14.1"
nom = { version = "7.1.0", default-features = false }
pathdiff = "0.2.1"
